# nineanime

./: Cargo.toml  LICENSE  README.md
examples/: get_download_link.rs
src/: error.rs  lib.rs  query.rs
